* Fix mouse events due to SVG stretching * Make sidebar scroll independently of page

--- a/web/src/templates/SvgCanvas.scss
+++ b/web/src/templates/SvgCanvas.scss
@@ -24,7 +24,7 @@
 
     rect.selection-outline {
       fill: none;
-      stroke: #66f;
+      stroke: #666;
       stroke-width: 1px;
       stroke-dasharray: 3 2;
     }
