--- a/web/src/templates/VisualTemplateEditor.scss
+++ b/web/src/templates/VisualTemplateEditor.scss
@@ -30,3 +30,8 @@ ul.block-list {
     }
   }
 }
+
+.scroll-pane {
+  max-height: calc(100vh - 250px);
+  overflow-y: auto;
+}
